Changes: 1) SchedulerInterface renamed to Scheduler 2) Created entities Candle, Instrument, Order and their repositories 3) Improved EventSimulator 4) Refactored Scheduler abstraction 5) Implemented support of price charts